Reverted to 076813b4cce344073717d6584ce7f6f2317b8a05

--- a/src/index.html
+++ b/src/index.html
@@ -2596,79 +2596,60 @@
                 </div>
               </div>
             </div>
-            <div class="profile-indicator__filters-wrapper">
-              <div class="profile-indicator__filter-labels">
-                <div class="mapping-options__filter">
-                  <div class="mapping-options__filter_label">
-                    <div>Filter by attribute:</div>
-                  </div>
+            <div class="profile-indicator__filters">
+              <div class="filter__dropdown_wrap">
+                <div class="dropdown-menu__label">
+                  <div>Select a value:</div>
                 </div>
-                <div class="mapping-options__filter disabled">
-                  <div class="mapping-options__filter_label">
-                    <div>Select a value:</div>
+                <div class="dropdown-menu">
+                  <div class="dropdown-menu__trigger">
+                    <div class="dropdown-menu__selected-item">
+                      <div class="truncate">All values</div>
+                    </div>
+                    <div class="dropdown-menu__icon">
+                      <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                          <path d="M0 0h24v24H0z" fill="none"></path>
+                          <path fill="currentColor" d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
+                        </svg></div>
+                    </div>
+                  </div>
+                  <div class="dropdown-menu__content scroll-element">
+                    <div class="dropdown__list_item selected">
+                      <div class="truncate">All values</div>
+                    </div>
+                    <div class="dropdown__list_item">
+                      <div class="truncate">Value name</div>
+                    </div>
+                    <div class="dropdown__list_item">
+                      <div class="truncate">Value name</div>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="profile-indicator__filter-row">
-                <div class="profile-indicator__filter">
-                  <div data-w-id="78932471-3a97-3e48-cc55-679a295ca760" class="profile-indicator__filter_menu">
-                    <div class="dropdown-menu__trigger">
-                      <div class="dropdown-menu__selected-item">
-                        <div class="truncate">Select an attribute</div>
-                      </div>
-                      <div class="dropdown-menu__icon">
-                        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                            <path d="M0 0h24v24H0z" fill="none"></path>
-                            <path fill="currentColor" d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
-                          </svg></div>
-                      </div>
+              <div class="filter__dropdown_wrap disabled">
+                <div class="dropdown-menu__label">
+                  <div>FILTER BY:</div>
+                </div>
+                <div class="dropdown-menu">
+                  <div class="dropdown-menu__trigger">
+                    <div class="dropdown-menu__selected-item">
+                      <div class="truncate">All values</div>
                     </div>
-                    <div class="dropdown-menu__content position-top scroll-element">
-                      <div class="dropdown__list_item selected">
-                        <div class="truncate">Select an attribute</div>
-                      </div>
-                      <div class="dropdown__list_item">
-                        <div class="truncate">Attribute</div>
-                      </div>
+                    <div class="dropdown-menu__icon">
+                      <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                          <path d="M0 0h24v24H0z" fill="none"></path>
+                          <path fill="currentColor" d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
+                        </svg></div>
                     </div>
                   </div>
-                </div>
-                <div class="profile-indicator__filter is--disabled">
-                  <div data-w-id="78932471-3a97-3e48-cc55-679a295ca76f" class="profile-indicator__filter_menu">
-                    <div class="dropdown-menu__trigger is--disabled">
-                      <div class="dropdown-menu__selected-item">
-                        <div class="truncate">Select a value</div>
-                      </div>
-                      <div class="dropdown-menu__icon">
-                        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                            <path d="M0 0h24v24H0z" fill="none"></path>
-                            <path fill="currentColor" d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
-                          </svg></div>
-                      </div>
+                  <div class="dropdown-menu__content scroll-element">
+                    <div class="dropdown__list_item selected">
+                      <div class="truncate">All filters</div>
                     </div>
-                    <div class="dropdown-menu__content position-top scroll-element">
-                      <div class="dropdown__list_item selected">
-                        <div class="truncate">Select a value</div>
-                      </div>
-                      <div class="dropdown__list_item">
-                        <div class="truncate">Value</div>
-                      </div>
+                    <div class="dropdown__list_item">
+                      <div class="truncate">Filter name</div>
                     </div>
                   </div>
-                </div>
-                <div class="profile-indicator__filter-buttons">
-                  <a title="Remove filter" href="#" class="profile-indicator__remove-filter is--hidden w-inline-block">
-                    <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                        <path d="M0 0h24v24H0z" fill="none"></path>
-                        <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
-                      </svg></div>
-                  </a>
-                  <a title="Remove filter" href="#" class="profile-indicator__new-filter w-inline-block">
-                    <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                        <path d="M0 0h24v24H0z" fill="none"></path>
-                        <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"></path>
-                      </svg></div>
-                  </a>
                 </div>
               </div>
             </div>
