--- a/src/index.html
+++ b/src/index.html
@@ -2633,9 +2633,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="profile-indicator__filter is--disabled">
+                <div class="profile-indicator__filter">
                   <div data-w-id="78932471-3a97-3e48-cc55-679a295ca76f" class="profile-indicator__filter_menu">
-                    <div class="dropdown-menu__trigger is--disabled">
+                    <div class="dropdown-menu__trigger">
                       <div class="dropdown-menu__selected-item">
                         <div class="truncate">Select a value</div>
                       </div>
