--- a/src/index.html
+++ b/src/index.html
@@ -401,6 +401,15 @@
           <div class="point-legend">
             <div class="point-legend__color"></div>
             <div class="point-legend__text">Loading...</div>
+            <div title="Remove from map" class="point-legend__remove">
+              <div class="svg-icon icon--small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                  viewBox="0 0 24 24">
+                  <path d="M0 0h24v24H0z" fill="none"></path>
+                  <path fill="red"
+                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
+                  </path>
+                </svg></div>
+            </div>
           </div>
         </div>
         <div class="map-print__choropleth-legend">
