remove disabled class from dropdown

--- a/src/index.html
+++ b/src/index.html
@@ -3009,7 +3009,7 @@
                 </div>
                 <div class="profile-indicator__filter disabled">
                   <div data-w-id="78932471-3a97-3e48-cc55-679a295ca76f" class="profile-indicator__filter_menu">
-                    <div class="dropdown-menu__trigger disabled">
+                    <div class="dropdown-menu__trigger">
                       <div class="dropdown-menu__selected-item">
                         <div class="truncate">Select a value</div>
                       </div>
