--- a/src/index.html
+++ b/src/index.html
@@ -3700,6 +3700,7 @@
       }
     });
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.debug.js"></script>
   <script src="js/index.js"></script>
   <script>
     setTimeout(function () {
