--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jul 12 2021 11:36:53 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5fd05e808ba660ae5c285574" data-wf-site="5fd05e808ba6609d12285571">
+<!--  Last Published: Tue Jul 13 2021 09:24:48 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="60ed4accb8a175783a8133c8" data-wf-site="5fd05e808ba6609d12285571">
 <head>
   <meta charset="utf-8">
   <title>Wazimap NG 2021</title>
@@ -35,25 +35,25 @@
 <body class="body no-scroll">
   <div class="login-modal hidden">
     <div class="login">
-      <div id="w-node-_8370c3c3-dd27-5ba4-e185-11a67e6ccd44-5c285574" class="login__title">
+      <div id="w-node-_8370c3c3-dd27-5ba4-e185-11a67e6ccd44-3a8133c8" class="login__title">
         <h1 class="clear">Login Required</h1>
       </div>
-      <div id="w-node-_138f8096-55b2-2cf7-756a-31f6ef2aede4-5c285574" data-w-id="138f8096-55b2-2cf7-756a-31f6ef2aede4" class="login__close">
+      <div id="w-node-_138f8096-55b2-2cf7-756a-31f6ef2aede4-3a8133c8" data-w-id="138f8096-55b2-2cf7-756a-31f6ef2aede4" class="login__close">
         <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
             <path d="M0 0h24v24H0z" fill="none"></path>
             <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
           </svg></div>
       </div>
-      <div id="w-node-_2a3c695e-4c47-ff4f-0294-09c3cf7a9fe2-5c285574" class="login__description">
+      <div id="w-node-_2a3c695e-4c47-ff4f-0294-09c3cf7a9fe2-3a8133c8" class="login__description">
         <div>This is private instance of Wazimap and requires you to be an authorized user to access it.</div>
       </div>
-      <div id="w-node-_5c3e6bec-baae-1fe9-3f2a-222d0aaebade-5c285574" class="login__form">
+      <div id="w-node-_5c3e6bec-baae-1fe9-3f2a-222d0aaebade-3a8133c8" class="login__form">
         <div class="form-block w-form">
           <form id="wf-form-Login-Form" name="wf-form-Login-Form" data-name="Login Form"><label for="Email">Username</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="" id="Email" required=""><label for="Password">Password</label><input type="password" class="text-field w-input" maxlength="256" name="Password" data-name="Password" id="Password" required="">
-            <div class="login-form__actions"><label id="w-node-_80c1d4e4-3db7-9834-435b-fefcf113a3cc-5c285574" class="w-checkbox login-form__checkbox">
+            <div class="login-form__actions"><label id="w-node-_80c1d4e4-3db7-9834-435b-fefcf113a3cc-3a8133c8" class="w-checkbox login-form__checkbox">
                 <div class="w-checkbox-input w-checkbox-input--inputType-custom custom-checkbox"></div><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" style="opacity:0;position:absolute;z-index:-1"><span class="checkbox-label w-form-label">Remember me</span>
-              </label><input type="submit" value="Login" data-wait="Please wait..." id="w-node-_2c610f29-c711-7689-3c43-fceb1157e41b-5c285574" class="button w-button">
-              <a id="w-node-_4cdd59b0-8837-5a43-7847-25fe1e234621-5c285574" href="#">Forgot your password?</a>
+              </label><input type="submit" value="Login" data-wait="Please wait..." id="w-node-_2c610f29-c711-7689-3c43-fceb1157e41b-3a8133c8" class="button w-button">
+              <a id="w-node-_4cdd59b0-8837-5a43-7847-25fe1e234621-3a8133c8" href="#">Forgot your password?</a>
             </div>
           </form>
           <div class="w-form-done">
@@ -79,7 +79,7 @@
             </svg></div>
         </div>
       </div>
-      <div data-animation="cross" data-nav-spacing="4" data-duration="500" id="w-node-_9c2adb70-bf6e-9460-9815-d1064d900402-5c285574" class="tutorial__slider w-slider">
+      <div data-animation="cross" data-nav-spacing="4" data-duration="500" id="w-node-_9c2adb70-bf6e-9460-9815-d1064d900402-3a8133c8" class="tutorial__slider w-slider">
         <div class="mask w-slider-mask">
           <div class="slide w-slide">
             <div class="tutorial__slide-content">
@@ -209,14 +209,14 @@
           <p><strong>Are you sure you would like to proceed?</strong></p>
         </div>
       </div>
-      <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5c-5c285574" class="warning__actions">
-        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5d-5c285574" class="dismiss__no-show">
+      <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5c-3a8133c8" class="warning__actions">
+        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5d-3a8133c8" class="dismiss__no-show">
           <div class="html-embed w-embed">
             <p><input type="checkbox" class="custom-checkbox" name="dismiss__no-show" id="no-show"></p>
           </div>
           <div class="checkbox-label">Don&#x27;t show again</div>
         </div>
-        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa61-5c285574" class="button-wrapper">
+        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa61-3a8133c8" class="button-wrapper">
           <a href="#" class="button button--margin-right button--grey w-button">Cancel</a>
           <a id="warning-proceed" href="#" class="button button--margin-right w-button">Proceed</a>
         </div>
@@ -236,10 +236,10 @@
       <div data-w-id="66ee4f1f-99f3-8310-c69c-b5d00bdac74c" style="opacity:1;display:none" class="nav__search-deselect"></div>
       <div class="nav__shadow"></div>
       <div class="nav__content">
-        <a id="w-node-_2331a044-806f-907c-13ce-926b3e9c855a-5c285574" href="#" class="nav__content_title w-inline-block">
+        <a id="w-node-_2331a044-806f-907c-13ce-926b3e9c855a-3a8133c8" href="#" class="nav__content_title w-inline-block">
           <div class="nav__profile-logo"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" alt="" class="profile-logo"></div>
         </a>
-        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c8568-5c285574" class="nav__content_search">
+        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c8568-3a8133c8" class="nav__content_search">
           <div class="nav__search_input">
             <div data-w-id="2331a044-806f-907c-13ce-926b3e9c8576" class="search__input w-form">
               <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><input type="text" class="location__search_input w-input" autocomplete="off" maxlength="256" name="Location" data-name="Location" placeholder="Search for a location..." id="Location">
@@ -286,7 +286,7 @@
             </div>
           </div>
         </div>
-        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c85a0-5c285574" class="nav__content_menu">
+        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c85a0-3a8133c8" class="nav__content_menu">
           <div class="nav__link-wrap">
             <a data-w-id="2331a044-806f-907c-13ce-926b3e9c8565" href="#" class="nav__link tutorial__open bg-primary w-inline-block">
               <div class="nav__link_icon">
@@ -354,7 +354,7 @@
           <a href="#"></a>
         </div>
       </div>
-      <div data-w-id="ca18ba5f-6616-3659-0f3a-3fde77d92a75" class="map-location">
+      <div class="map-location">
         <div class="map-location__tags">
           <div title="Click to make this your primary search" class="location-tag__loading">
             <div class="location-tag__type bg-primary">
@@ -449,7 +449,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="mapping-options__filter disabled">
+                <div class="mapping-options__filter">
                   <div data-w-id="12072a39-b6dc-5a3c-8bd9-809d5d0a98d6" class="mapping-options__filter_menu">
                     <div class="dropdown-menu__trigger">
                       <div class="dropdown-menu__selected-item">
@@ -472,21 +472,20 @@
                     </div>
                   </div>
                 </div>
-                <div class="mapping-options__filter-buttons">
-                  <a title="Remove filter" href="#" class="mapping-options__new-filter w-inline-block">
-                    <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                        <path d="M0 0h24v24H0z" fill="none"></path>
-                        <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"></path>
-                      </svg></div>
-                  </a>
-                  <a title="Remove filter" href="#" class="mapping-options__remove-filter is--hidden w-inline-block">
-                    <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                        <path d="M0 0h24v24H0z" fill="none"></path>
-                        <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
-                      </svg></div>
-                  </a>
-                </div>
+                <a title="Remove filter" href="#" class="mapping-options__remove-filter is--hidden w-inline-block">
+                  <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                      <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
+                    </svg></div>
+                </a>
               </div>
+              <a title="Add new filter" href="#" class="mapping-options__add-filter w-inline-block">
+                <div class="text-block-3">Add new filter</div>
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                    <path d="M0 0h24v24H0z" fill="none"></path>
+                    <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"></path>
+                  </svg></div>
+              </a>
             </div>
           </div>
           <div class="map-options__legend">
@@ -502,7 +501,7 @@
           </div>
           <div style="display:flex" class="map-options__context">
             <div class="map-option__context_text">
-              <div>Loading...</div>
+              <div>Indicator context</div>
             </div>
           </div>
         </div>
@@ -2341,7 +2340,7 @@
                         <div class="location-facility__item_value">
                           <div>...</div>
                         </div>
-                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607bde-5c285574" class="location-facility__item_download">
+                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607bde-3a8133c8" class="location-facility__item_download">
                           <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
                               <path d="M0 0h24v24H0z" fill="none"></path>
                               <path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
@@ -2355,7 +2354,7 @@
                         <div class="location-facility__item_value">
                           <div>...</div>
                         </div>
-                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607be7-5c285574" class="location-facility__item_download">
+                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607be7-3a8133c8" class="location-facility__item_download">
                           <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
                               <path d="M0 0h24v24H0z" fill="none"></path>
                               <path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
@@ -2408,7 +2407,7 @@
             <div class="search__list-item_location-parent">
               <div class="truncate">Parent </div>
             </div>
-            <div id="w-node-_0cc195d0-8237-0a5c-88c5-6bd36b98a8c8-5c285574" class="search__list-item_location-type">
+            <div id="w-node-_0cc195d0-8237-0a5c-88c5-6bd36b98a8c8-3a8133c8" class="search__list-item_location-type">
               <div class="truncate">Location Type</div>
             </div>
           </div>
@@ -2421,7 +2420,7 @@
             <div class="search__list-item_location-parent">
               <div class="truncate">Parent </div>
             </div>
-            <div id="w-node-_8d9eb87a-805a-ef6a-0ef3-bca9e2f0f20f-5c285574" class="search__list-item_location-type">
+            <div id="w-node-_8d9eb87a-805a-ef6a-0ef3-bca9e2f0f20f-3a8133c8" class="search__list-item_location-type">
               <div class="truncate">Location Type</div>
             </div>
           </div>
@@ -2665,14 +2664,15 @@
                         <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
                       </svg></div>
                   </a>
-                  <a title="Remove filter" href="#" class="profile-indicator__new-filter w-inline-block">
-                    <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                        <path d="M0 0h24v24H0z" fill="none"></path>
-                        <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"></path>
-                      </svg></div>
-                  </a>
                 </div>
               </div>
+              <a title="Add new filter" href="#" class="profile-indicator__new-filter w-inline-block">
+                <div class="text-block-3">Add new filter</div>
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                    <path d="M0 0h24v24H0z" fill="none"></path>
+                    <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"></path>
+                  </svg></div>
+              </a>
             </div>
             <div class="profile-indicator__chart">
               <div class="profile-indicator__chart_body">
