new webflow export

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jul 05 2021 08:14:16 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5fd05e808ba660ae5c285574" data-wf-site="5fd05e808ba6609d12285571">
+<!--  Last Published: Tue Jul 13 2021 09:24:48 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="60ed4accb8a175783a8133c8" data-wf-site="5fd05e808ba6609d12285571">
 
 <head>
   <meta charset="utf-8">
@@ -59,10 +59,10 @@
 <body class="body no-scroll">
   <div class="login-modal hidden">
     <div class="login">
-      <div id="w-node-_8370c3c3-dd27-5ba4-e185-11a67e6ccd44-5c285574" class="login__title">
+      <div id="w-node-_8370c3c3-dd27-5ba4-e185-11a67e6ccd44-3a8133c8" class="login__title">
         <h1 class="clear">Login Required</h1>
       </div>
-      <div id="w-node-_138f8096-55b2-2cf7-756a-31f6ef2aede4-5c285574" data-w-id="138f8096-55b2-2cf7-756a-31f6ef2aede4"
+      <div id="w-node-_138f8096-55b2-2cf7-756a-31f6ef2aede4-3a8133c8" data-w-id="138f8096-55b2-2cf7-756a-31f6ef2aede4"
         class="login__close">
         <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
             viewBox="0 0 24 24">
@@ -72,25 +72,25 @@
             </path>
           </svg></div>
       </div>
-      <div id="w-node-_2a3c695e-4c47-ff4f-0294-09c3cf7a9fe2-5c285574" class="login__description">
+      <div id="w-node-_2a3c695e-4c47-ff4f-0294-09c3cf7a9fe2-3a8133c8" class="login__description">
         <div>This is private instance of Wazimap and requires you to be an authorized user to access it.</div>
       </div>
-      <div id="w-node-_5c3e6bec-baae-1fe9-3f2a-222d0aaebade-5c285574" class="login__form">
+      <div id="w-node-_5c3e6bec-baae-1fe9-3f2a-222d0aaebade-3a8133c8" class="login__form">
         <div class="form-block w-form">
           <form id="wf-form-Login-Form" name="wf-form-Login-Form" data-name="Login Form"><label
               for="Email">Username</label><input type="email" class="text-field w-input" maxlength="256" name="Email"
               data-name="Email" placeholder="" id="Email" required=""><label for="Password">Password</label><input
               type="password" class="text-field w-input" maxlength="256" name="Password" data-name="Password"
               id="Password" required="">
-            <div class="login-form__actions"><label id="w-node-_80c1d4e4-3db7-9834-435b-fefcf113a3cc-5c285574"
+            <div class="login-form__actions"><label id="w-node-_80c1d4e4-3db7-9834-435b-fefcf113a3cc-3a8133c8"
                 class="w-checkbox login-form__checkbox">
                 <div class="w-checkbox-input w-checkbox-input--inputType-custom custom-checkbox"></div><input
                   type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2"
                   style="opacity:0;position:absolute;z-index:-1"><span class="checkbox-label w-form-label">Remember
                   me</span>
               </label><input type="submit" value="Login" data-wait="Please wait..."
-                id="w-node-_2c610f29-c711-7689-3c43-fceb1157e41b-5c285574" class="button w-button">
-              <a id="w-node-_4cdd59b0-8837-5a43-7847-25fe1e234621-5c285574" href="#">Forgot your password?</a>
+                id="w-node-_2c610f29-c711-7689-3c43-fceb1157e41b-3a8133c8" class="button w-button">
+              <a id="w-node-_4cdd59b0-8837-5a43-7847-25fe1e234621-3a8133c8" href="#">Forgot your password?</a>
             </div>
           </form>
           <div class="w-form-done">
@@ -121,7 +121,7 @@
         </div>
       </div>
       <div data-animation="cross" data-nav-spacing="4" data-duration="500"
-        id="w-node-_9c2adb70-bf6e-9460-9815-d1064d900402-5c285574" class="tutorial__slider w-slider">
+        id="w-node-_9c2adb70-bf6e-9460-9815-d1064d900402-3a8133c8" class="tutorial__slider w-slider">
         <div class="mask w-slider-mask">
           <div class="slide w-slide">
             <div class="tutorial__slide-content">
@@ -264,14 +264,14 @@
           <p><strong>Are you sure you would like to proceed?</strong></p>
         </div>
       </div>
-      <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5c-5c285574" class="warning__actions">
-        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5d-5c285574" class="dismiss__no-show">
+      <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5c-3a8133c8" class="warning__actions">
+        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa5d-3a8133c8" class="dismiss__no-show">
           <div class="html-embed w-embed">
             <p><input type="checkbox" class="custom-checkbox" name="dismiss__no-show" id="no-show"></p>
           </div>
           <div class="checkbox-label">Don't show again</div>
         </div>
-        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa61-5c285574" class="button-wrapper">
+        <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa61-3a8133c8" class="button-wrapper">
           <a href="#" class="button button--margin-right button--grey w-button">Cancel</a>
           <a id="warning-proceed" href="#" class="button button--margin-right w-button">Proceed</a>
         </div>
@@ -292,13 +292,13 @@
       </div>
       <div class="nav__shadow"></div>
       <div class="nav__content">
-        <a id="w-node-_2331a044-806f-907c-13ce-926b3e9c855a-5c285574" href="#"
+        <a id="w-node-_2331a044-806f-907c-13ce-926b3e9c855a-3a8133c8" href="#"
           class="nav__content_title w-inline-block">
           <div class="nav__profile-logo"><img
               src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" alt=""
               class="profile-logo"></div>
         </a>
-        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c8568-5c285574" class="nav__content_search">
+        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c8568-3a8133c8" class="nav__content_search">
           <div class="nav__search_input">
             <div data-w-id="2331a044-806f-907c-13ce-926b3e9c8576" class="search__input w-form">
               <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><input
@@ -353,7 +353,7 @@
             </div>
           </div>
         </div>
-        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c85a0-5c285574" class="nav__content_menu">
+        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c85a0-3a8133c8" class="nav__content_menu">
           <div class="nav__link-wrap">
             <a data-w-id="2331a044-806f-907c-13ce-926b3e9c8565" href="#"
               class="nav__link tutorial__open bg-primary w-inline-block">
@@ -401,15 +401,6 @@
           <div class="point-legend">
             <div class="point-legend__color"></div>
             <div class="point-legend__text">Loading...</div>
-            <div title="Remove from map" class="point-legend__remove">
-              <div class="svg-icon icon--small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                  viewBox="0 0 24 24">
-                  <path d="M0 0h24v24H0z" fill="none"></path>
-                  <path fill="red"
-                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
-                  </path>
-                </svg></div>
-            </div>
           </div>
         </div>
         <div class="map-print__choropleth-legend">
@@ -441,7 +432,7 @@
           <a href="#"></a>
         </div>
       </div>
-      <div data-w-id="ca18ba5f-6616-3659-0f3a-3fde77d92a75" class="map-location">
+      <div class="map-location">
         <div class="map-location__tags">
           <div title="Click to make this your primary search" class="location-tag__loading">
             <div class="location-tag__type bg-primary">
@@ -464,7 +455,7 @@
               <div class="svg-icon icon--small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                   viewBox="0 0 24 24">
                   <path d="M0 0h24v24H0z" fill="none"></path>
-                  <path fill="red"
+                  <path fill="currentColor"
                     d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
                   </path>
                 </svg></div>
@@ -552,7 +543,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="mapping-options__filter disabled">
+                <div class="mapping-options__filter">
                   <div data-w-id="12072a39-b6dc-5a3c-8bd9-809d5d0a98d6" class="mapping-options__filter_menu">
                     <div class="dropdown-menu__trigger">
                       <div class="dropdown-menu__selected-item">
@@ -611,23 +602,6 @@
             <div class="map-option__context_text">
               <div>Indicator context</div>
             </div>
-            <div data-w-id="86654d00-b063-c2ad-61db-f5ff0f0a4653" class="map-options__context_tooltip">
-              <div style="display:none" class="tooltip">
-                <div class="tooltip-card dark">
-                  <div class="tooltip-text">
-                    <div>Tooltip text</div>
-                  </div>
-                  <div class="tooltip-notch dark"></div>
-                </div>
-              </div>
-              <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="24"
-                  viewBox="0 0 24 24" width="24">
-                  <path d="M0 0h24v24H0z" fill="none"></path>
-                  <path fill="currentColor"
-                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z">
-                  </path>
-                </svg></div>
-            </div>
           </div>
         </div>
       </div>
@@ -660,7 +634,7 @@
           </div>
         </div>
       </div>
-      <div title="Download map" class="map-download hover-text-primary">
+      <div title="Download map" class="map-download hover-text-primary disabled">
         <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
             viewBox="0 0 24 24">
             <path d="M0 0h24v24H0z" fill="none"></path>
@@ -919,12 +893,23 @@
       </div>
       <a href="#" class="facility-info__view-google-map hidden w-inline-block">
         <div class="facility-info__google-map-icon">
-          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 150 150">
-              <path fill="#1a73e8" d="M89.77,10.4c-4.4-1.39-9.08-2.15-13.94-2.15c-14.18,0-26.87,6.41-35.33,16.48l21.8,18.34L89.77,10.4z"></path>
-              <path fill="#ea4335" d="M40.49,24.73c-6.74,8.02-10.81,18.37-10.81,29.66c0,8.68,1.73,15.71,4.57,22.01l28.04-33.33L40.49,24.73z"></path>
-              <path fill="#4285f4" d="M75.83,36.75c9.75,0,17.65,7.9,17.65,17.65c0,4.34-1.57,8.32-4.17,11.39c0,0,13.94-16.58,27.47-32.66   c-5.59-10.75-15.28-19.02-27-22.73L62.29,43.07C65.53,39.2,70.39,36.75,75.83,36.75"></path>
-              <path fill="#fbbc04" d="M75.83,72.04c-9.75,0-17.65-7.9-17.65-17.65c0-4.31,1.55-8.26,4.11-11.33L34.25,76.4   c4.79,10.63,12.76,19.16,20.97,29.91L89.3,65.79C86.07,69.61,81.23,72.04,75.83,72.04"></path>
-              <path fill="#34a853" d="M88.63,117.37c15.39-24.07,33.34-35,33.34-62.98c0-7.67-1.88-14.9-5.19-21.26l-61.55,73.18   c2.61,3.42,5.24,7.06,7.81,11.07c9.36,14.46,6.76,23.13,12.8,23.13C81.86,140.51,79.27,131.83,88.63,117.37"></path>
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 150 150">
+              <path fill="#1a73e8"
+                d="M89.77,10.4c-4.4-1.39-9.08-2.15-13.94-2.15c-14.18,0-26.87,6.41-35.33,16.48l21.8,18.34L89.77,10.4z">
+              </path>
+              <path fill="#ea4335"
+                d="M40.49,24.73c-6.74,8.02-10.81,18.37-10.81,29.66c0,8.68,1.73,15.71,4.57,22.01l28.04-33.33L40.49,24.73z">
+              </path>
+              <path fill="#4285f4"
+                d="M75.83,36.75c9.75,0,17.65,7.9,17.65,17.65c0,4.34-1.57,8.32-4.17,11.39c0,0,13.94-16.58,27.47-32.66   c-5.59-10.75-15.28-19.02-27-22.73L62.29,43.07C65.53,39.2,70.39,36.75,75.83,36.75">
+              </path>
+              <path fill="#fbbc04"
+                d="M75.83,72.04c-9.75,0-17.65-7.9-17.65-17.65c0-4.31,1.55-8.26,4.11-11.33L34.25,76.4   c4.79,10.63,12.76,19.16,20.97,29.91L89.3,65.79C86.07,69.61,81.23,72.04,75.83,72.04">
+              </path>
+              <path fill="#34a853"
+                d="M88.63,117.37c15.39-24.07,33.34-35,33.34-62.98c0-7.67-1.88-14.9-5.19-21.26l-61.55,73.18   c2.61,3.42,5.24,7.06,7.81,11.07c9.36,14.46,6.76,23.13,12.8,23.13C81.86,140.51,79.27,131.83,88.63,117.37">
+              </path>
             </svg></div>
         </div>
         <div class="facility-info__google-map-text">View location in Google Maps</div>
@@ -2684,7 +2669,7 @@
                         <div class="location-facility__item_value">
                           <div>...</div>
                         </div>
-                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607bde-5c285574"
+                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607bde-3a8133c8"
                           class="location-facility__item_download">
                           <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24"
                               height="24" viewBox="0 0 24 24">
@@ -2700,7 +2685,7 @@
                         <div class="location-facility__item_value">
                           <div>...</div>
                         </div>
-                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607be7-5c285574"
+                        <div id="w-node-_91faa97b-05e0-ee56-35d9-a4312e607be7-3a8133c8"
                           class="location-facility__item_download">
                           <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24"
                               height="24" viewBox="0 0 24 24">
@@ -2755,7 +2740,7 @@
             <div class="search__list-item_location-parent">
               <div class="truncate">Parent </div>
             </div>
-            <div id="w-node-_0cc195d0-8237-0a5c-88c5-6bd36b98a8c8-5c285574" class="search__list-item_location-type">
+            <div id="w-node-_0cc195d0-8237-0a5c-88c5-6bd36b98a8c8-3a8133c8" class="search__list-item_location-type">
               <div class="truncate">Location Type</div>
             </div>
           </div>
@@ -2768,7 +2753,7 @@
             <div class="search__list-item_location-parent">
               <div class="truncate">Parent </div>
             </div>
-            <div id="w-node-_8d9eb87a-805a-ef6a-0ef3-bca9e2f0f20f-5c285574" class="search__list-item_location-type">
+            <div id="w-node-_8d9eb87a-805a-ef6a-0ef3-bca9e2f0f20f-3a8133c8" class="search__list-item_location-type">
               <div class="truncate">Location Type</div>
             </div>
           </div>
@@ -2998,7 +2983,7 @@
                 </div>
                 <div class="profile-indicator__filter disabled">
                   <div data-w-id="78932471-3a97-3e48-cc55-679a295ca76f" class="profile-indicator__filter_menu">
-                    <div class="dropdown-menu__trigger">
+                    <div class="dropdown-menu__trigger disabled">
                       <div class="dropdown-menu__selected-item">
                         <div class="truncate">Select a value</div>
                       </div>
@@ -3030,15 +3015,16 @@
                         </path>
                       </svg></div>
                   </a>
-                  <a title="Remove filter" href="#" class="profile-indicator__new-filter w-inline-block">
-                    <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                        viewBox="0 0 24 24">
-                        <path d="M0 0h24v24H0z" fill="none"></path>
-                        <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"></path>
-                      </svg></div>
-                  </a>
                 </div>
               </div>
+              <a title="Add new filter" href="#" class="profile-indicator__new-filter w-inline-block">
+                <div class="text-block-3">Add new filter</div>
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                    viewBox="0 0 24 24">
+                    <path d="M0 0h24v24H0z" fill="none"></path>
+                    <path fill="currentColor" d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"></path>
+                  </svg></div>
+              </a>
             </div>
             <div class="profile-indicator__chart">
               <div class="profile-indicator__chart_body">
